--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "nanoid": "^5.0.5",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
